// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendOverlay should render a horizontal alignment correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-legend-overlay"
    >
      <foreignobject
        height="0"
        style="width: 100%; height: 100%; pointer-events: none;"
        width="0"
      >
        <div
          class="d3-chart legend"
          style="border: thin solid #ccc; display: flex; flex-direction: row; flex-wrap: wrap; position: absolute; right: 10px; top: 10px; max-width: -40px; max-height: -40px; padding: 8px; background: rgb(255, 255, 255); opacity: 1; overflow: hidden;"
        >
          <div
            class="d3-chart legend-item"
            style="display: flex; flex-direction: row; user-select: none; pointer-events: none; color: rgb(0, 0, 0); font-size: 12px; font-family: sans-serif;"
          >
            <div
              class="d3-chart indicator-circle"
              style="background: blue; width: 10px; height: 10px; margin-top: 4px; margin-left: 5px; margin-right: 5px; border-radius: 50%; flex-shrink: 0;"
            />
            <div
              class="d3-chart legend-values"
              style="display: flex; flex-direction: row; justify-content: space-between; width: 100%; flex-grow: 1; flex-shrink: 1;"
            >
              <span
                class="d3-chart legend-series-name"
                style="margin-right: 15px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; flex-grow: 1; flex-shrink: 1;"
              >
                a
              </span>
            </div>
          </div>
          <div
            class="d3-chart legend-item"
            style="display: flex; flex-direction: row; user-select: none; pointer-events: none; color: rgb(0, 0, 0); font-size: 12px; font-family: sans-serif;"
          >
            <div
              class="d3-chart indicator-square"
              style="background: orange; height: 10px; width: 10px; margin-top: 4px; margin-right: 5px; margin-left: 5px; flex-shrink: 0;"
            />
            <div
              class="d3-chart legend-values"
              style="display: flex; flex-direction: row; justify-content: space-between; width: 100%; flex-grow: 1; flex-shrink: 1;"
            >
              <span
                class="d3-chart legend-series-name"
                style="margin-right: 15px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; flex-grow: 1; flex-shrink: 1;"
              >
                b
              </span>
            </div>
          </div>
        </div>
      </foreignobject>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`LegendOverlay should render a vertical alignment correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-legend-overlay"
    >
      <foreignobject
        height="0"
        style="width: 100%; height: 100%; pointer-events: none;"
        width="0"
      >
        <div
          class="d3-chart legend"
          style="border: thin solid #ccc; display: flex; flex-direction: column; flex-wrap: wrap; position: absolute; left: 10px; transform: translateY(-50%); top: 50%; max-width: 200px; max-height: -40px; padding: 8px; background: rgb(255, 255, 255); opacity: 1; overflow: hidden;"
        >
          <div
            class="d3-chart legend-item"
            style="display: flex; flex-direction: row; user-select: none; pointer-events: none; color: rgb(0, 0, 0); font-size: 12px; font-family: sans-serif;"
          >
            <div
              class="d3-chart indicator-circle"
              style="background: blue; width: 10px; height: 10px; margin-top: 4px; margin-left: 5px; margin-right: 5px; border-radius: 50%; flex-shrink: 0;"
            />
            <div
              class="d3-chart legend-values"
              style="display: flex; flex-direction: row; justify-content: space-between; width: 100%; flex-grow: 1; flex-shrink: 1;"
            >
              <span
                class="d3-chart legend-series-name"
                style="margin-right: 15px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; flex-grow: 1; flex-shrink: 1;"
              >
                a
              </span>
            </div>
          </div>
          <div
            class="d3-chart legend-item"
            style="display: flex; flex-direction: row; user-select: none; pointer-events: none; color: rgb(0, 0, 0); font-size: 12px; font-family: sans-serif;"
          >
            <div
              class="d3-chart indicator-square"
              style="background: orange; height: 10px; width: 10px; margin-top: 4px; margin-right: 5px; margin-left: 5px; flex-shrink: 0;"
            />
            <div
              class="d3-chart legend-values"
              style="display: flex; flex-direction: row; justify-content: space-between; width: 100%; flex-grow: 1; flex-shrink: 1;"
            >
              <span
                class="d3-chart legend-series-name"
                style="margin-right: 15px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; flex-grow: 1; flex-shrink: 1;"
              >
                b
              </span>
            </div>
          </div>
        </div>
      </foreignobject>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`LegendOverlay should render nothing if there are no items 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-legend-overlay"
    />
  </svg>
</DocumentFragment>
`;
